fix: metabase double scroll (#97)

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -116,6 +116,13 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --metabase-embed-height-hack-avoiding-double-scroll: 900px;
+}
+
+@media (min-width: 48rem) {
+  :root {
+    --metabase-embed-height-hack-avoiding-double-scroll: 1600px;
+  }
 }
 
 .dark {
